Fixed overflow problem for some browsers in the documentation website. And added smooth scrolling

--- a/docs/src/client/Root/styles.scss
+++ b/docs/src/client/Root/styles.scss
@@ -277,3 +277,8 @@
     background: $md-amber-500;
   }
 }
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
